<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>c_j_bolt</groupId>
  <artifactId>EubosChess</artifactId>
  <version>1.0.7</version>
  <name>Eubos</name>
  <description>Eubos Chess Engine</description>
  <dependencies>
  	<dependency>
  		<groupId>junit</groupId>
  		<artifactId>junit</artifactId>
  		<scope>test</scope>
  	</dependency>
	<dependency>
		<groupId>com.github.jjYBdx4IL.chess</groupId>
		<artifactId>jcpi</artifactId>
		<version>1.4.1.1</version>
	</dependency>
	<dependency>
		<groupId>org.mockito</groupId>
		<artifactId>mockito-core</artifactId>
	</dependency>
  </dependencies>
     <repositories>
      <repository>
         <id>maven.fluxchess.com</id>
         <url>http://maven.fluxchess.com/release</url>
      </repository>
   </repositories>
     <properties>
     	<maven.compiler.target>1.8</maven.compiler.target>
     	<maven.compiler.source>1.8</maven.compiler.source>
     </properties>
     <dependencyManagement>
     	<dependencies>
     		<dependency>
     			<groupId>com.fluxchess</groupId>
     			<artifactId>jcpi</artifactId>
     			<version>1.4.0</version>
     		</dependency>
     		<dependency>
     			<groupId>junit</groupId>
     			<artifactId>junit</artifactId>
     			<version>4.12</version>
     		</dependency>
     		<dependency>
     			<groupId>org.mockito</groupId>
     			<artifactId>mockito-core</artifactId>
     			<version>2.19.1</version>
     		</dependency>
     	</dependencies>
     </dependencyManagement>
</project>